# Onboarding-Planner

./: README.md  main.py  pyproject.toml  requirements.txt
docs/: architecture.md  prompts.md  workflow.md
openspec/changes/interactive-hitl/: design.md  proposal.md  tasks.md
openspec/changes/interactive-hitl/specs/interactive-hitl/: spec.md
tests/: conftest.py  test_executor.py  test_llm_factory.py  test_models.py  test_planner.py  test_validator.py  test_workflow.py
warehouse_assistant/: __init__.py  config.py  exceptions.py  llm_factory.py  logging_config.py  metrics.py  models.py  workflow.py
warehouse_assistant/agents/: __init__.py  executor.py  planner.py
warehouse_assistant/prompts/: __init__.py  prompts.py
warehouse_assistant/utils/: __init__.py  validator.py
warehouse_onboarding_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
