[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warehouse-onboarding-assistant"
version = "0.1.0"
description = "LangChain-based warehouse onboarding assistant with planner and executor agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "langchain>=0.2",
  "langchain-ollama>=0.1",
  "langchain-google-genai>=2.0",
  "langchain-openai>=0.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.setuptools.packages.find]
include = ["warehouse_assistant*"]
